[FIX] web_enterprise: fix html field editor design
The design was ok on community but broken on enterprise. This is
because the editor used to have two different designs to maintain while
it is only one now.

This may need to be backported.

closes odoo/enterprise#13672

X-original-commit: 6b3643d8789d246095876d8da9a706ce9c5dd137
Related: odoo/odoo#58788

--- a/web_enterprise/static/src/scss/form_view.scss
+++ b/web_enterprise/static/src/scss/form_view.scss
@@ -164,17 +164,16 @@
                             @include o-form-sheet-inner-right-padding;
                             border-top: none;
                             padding-top: $o-horizontal-padding*0.3;
-                            background: white;
-
-                            .btn-secondary {
-                                @include o-hover-text-color($body-color, $link-color);
-                            }
                         }
 
                         .note-editing-area, .o_readonly {
                             padding: $card-spacer-y $card-spacer-x;
                             @include o-form-sheet-inner-left-padding;
                             @include o-form-sheet-inner-right-padding;
+                        }
+
+                        .note-editable.panel-body {
+                            padding: 0;
                         }
 
                         // If immediatly followed by an .oe_clear element, the note-editor it's the 'only'
